# itmo-labs

./: README.md
1sem/algos/: README.md
1sem/algos/DSU/: A.cpp  H.cpp  I.cpp  J.cpp  README.md
1sem/algos/dynamic/: D.cpp  F.cpp  G.cpp  I.cpp  J.cpp  K.cpp  M.cpp  README.md
1sem/algos/intro/: A.cpp  E.cpp  G.cpp  I.cpp  K.cpp  M.cpp  O.cpp  README.md
1sem/algos/lab1/: B.cpp  C.cpp  F.cpp  H.cpp  J.py  L.py  M.py  N.cpp  O.py
1sem/algos/lab2/: A.cpp  B.cpp  C.cpp  H.cpp  L.cpp  N.cpp
1sem/algos/lab3/: F.cpp
1sem/dm/: README.md
1sem/dm/lab1-boolean/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  README.md
1sem/dm/lab2-encode/: A.py  B.cpp  C.cpp  D.cpp  E.cpp  F.java  G.java  I.py  README.md
1sem/dm/lab3-combinatorics/: 1.cpp  2.cpp  24.cpp  25.cpp  27.cpp  4.cpp  6.cpp  7.cpp  8.cpp  9.cpp  README.md
2sem/algos/: README.md
2sem/algos/search/: A.cpp  AVL.java  B.cpp  C.java  D.java  Dekartach.java  F.java  H.java  I.java  J.java  L.cpp  README.md
2sem/algos/segtrees/: A.cpp  A.java  B.cpp  C.cpp  C.java  D.cpp  D.java  F.java  G.java  README.md
2sem/dm/: README.md
2sem/dm/ CF-grammar/: README.md
2sem/dm/automata/: A.cpp  B.cpp  D.cpp  (+4 more)
3sem/os-adv/: README.md
5sem/asm/asm23-lzw-madoxann/: .gitignore  CMakeLists.txt  lzw.asm  tmain.c
5sem/asm/asm23-lzw-madoxann/compress/: Cargo.toml  README.md
5sem/asm/asm23-lzw-madoxann/compress/input/: 0.txt
5sem/asm/asm23-lzw-madoxann/compress/output/: 0.txt  1.txt
5sem/asm/asm23-lzw-madoxann/compress/src/: main.rs
5sem/asm/asm23-print-madoxann/: CMakeLists.txt  print.asm  tmain.c
(+156 files in other folders)
